Fix dropdown contrast

--- a/src/dark-mode.css
+++ b/src/dark-mode.css
@@ -136,6 +136,12 @@ body {
 .UvHKof.CNpREd .bFjUmb-Ysl7Fe {
   background-color: var(--white-hover) !important;
 }
+.ncFHed .MocG8c.KKjvXb {
+  background-color: var(--white-hover) !important;
+}
+.ybOdnf .OA0qNb .LMgvRb[aria-selected="true"] {
+  background-color: var(--blue-hover) !important;
+}
 
 /* Classroom Text */
 .rpo4wf-J3yWx {
